--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,14 @@ h2 {
   font-family: "Poppins", sans-serif;
 }
 
+.secondary-hero {
+  text-align: center;
+  background: rgba(144, 246, 215, 0.3);
+  padding: 40px;
+  margin-bottom: 40px;
+  border-bottom: 8px solid var(--secondary-color);
+}
+
 .primary-button,
 .primary-button:focus {
   background: var(--third-color);
@@ -92,6 +100,13 @@ h2 {
     display: block;
     margin: 0 auto;
   }
+}
+
+.portfolio-img {
+  transition: all 200ms ease-in-out;
+}
+.portfolio-img:hover {
+  opacity: 60%;
 }
 
 @media (max-width: 475px) {
