--- a/src/style.css
+++ b/src/style.css
@@ -58,7 +58,8 @@ a {
   font-size: 80px;
 }
 .header-img {
-  max-width: 225px;
+  max-width: 250px;
+  margin-top: 20px;
   margin-right: 50px;
   border-radius: 50px;
   border: 3px solid var(--secondary-color);
@@ -144,6 +145,10 @@ a {
   font-size: 14px;
 }
 
+.bottom-bar-contact {
+  margin-top: 100px;
+}
+
 @media (max-width: 1200px) {
   .project-description {
     margin-top: 30px;
@@ -154,6 +159,10 @@ a {
   .project-description {
     margin-top: 20px;
     padding-top: 0px;
+  }
+
+  .work-inquiry a {
+    margin-top: 40px !important;
   }
 }
 
@@ -172,6 +181,14 @@ a {
   .secondary-hero h1 {
     font-size: 60px;
   }
+  .work-inquiry {
+    padding: 30px;
+    text-align: center;
+  }
+
+  .work-inquiry a {
+    margin-top: 10px !important;
+  }
 }
 
 @media (max-width: 475px) {
@@ -186,5 +203,9 @@ a {
   }
   .bottom-bar {
     font-size: 12px;
+    padding: 20px 20px;
+  }
+  .bottom-bar p a {
+    margin-left: 0;
   }
 }
